# EffingScaling

./: .gitignore  README.md  pyproject.toml
playground/: correlations.py  fit_a3.py  misfitting_data.ipynb  mlp_data.ipynb  nano_seeds.ipynb  nanotabpfn.ipynb  neurips_approach3.ipynb  neurips_isoflops.ipynb  neurips_new_approach.ipynb  parallel_fitting.py  porian_data.ipynb  rebuttal_icml.ipynb  ws_data.ipynb
scaling/: utils.py  visualize.py
